--- a/Android/FamilyParking2/app/src/main/res/layout/contact_group_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_group_item.xml
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:gravity="center"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textSize="25sp"
         android:textColor="@color/white"
         android:background="@drawable/add_group"/>
