Some Group Functions iOS

--- a/iOS/MapDem2/MapDemo/Base.lproj/Main.storyboard
+++ b/iOS/MapDem2/MapDemo/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xAB-XP-blu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-932" y="767"/>
+            <point key="canvasLocation" x="-1960" y="531"/>
         </scene>
         <!--Map-->
         <scene sceneID="tne-QT-ifu">
@@ -115,16 +115,34 @@
                         <outlet property="TabBar" destination="8bC-Xf-vdC" id="n75-3l-lQE"/>
                         <segue destination="Qu7-uJ-1Ad" kind="modal" identifier="goto_login" id="ebg-zw-Dui"/>
                         <segue destination="5f9-IH-U2Z" kind="modal" identifier="add_car" id="HTR-2Y-p6f"/>
+                        <segue destination="VWt-vz-Yaw" kind="modal" identifier="add_group_plus" id="JsQ-LV-Sbo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-227" y="805"/>
+            <point key="canvasLocation" x="-1409" y="531"/>
+        </scene>
+        <!--Groups-->
+        <scene sceneID="2IQ-cX-UMt">
+            <objects>
+                <navigationController id="R4w-dh-HXK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Groups" id="hJ8-LP-Z5x"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XWt-Fn-WsH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="tRf-WH-9y6" kind="relationship" relationship="rootViewController" id="oV4-kM-slt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XFE-l3-bzC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2522" y="531"/>
         </scene>
         <!--Groups-->
         <scene sceneID="qf9-6o-K1R">
             <objects>
-                <viewController id="tRf-WH-9y6" sceneMemberID="viewController">
+                <viewController id="tRf-WH-9y6" customClass="GroupListViewController" customModule="MapDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pcn-LF-GyY"/>
                         <viewControllerLayoutGuide type="bottom" id="fc6-Qc-w0m"/>
@@ -135,10 +153,54 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" tag="2" title="Groups" id="5nK-AD-pxT"/>
+                    <navigationItem key="navigationItem" title="Groups" id="cpN-Vm-nJw">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="i9c-lY-HHP">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9GA-GY-SJL">
+                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="VWt-vz-Yaw" kind="modal" id="pEW-q5-sfq"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lCX-G6-6mL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1632" y="870"/>
+            <point key="canvasLocation" x="-2522" y="1246"/>
+        </scene>
+        <!--Add Group-->
+        <scene sceneID="iKF-4w-MQ1">
+            <objects>
+                <viewController id="VWt-vz-Yaw" customClass="AddGroup" customModule="MapDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NvM-q3-Yoe"/>
+                        <viewControllerLayoutGuide type="bottom" id="pXs-1D-qMV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="orq-ez-zgq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IXX-yB-8bH">
+                                <rect key="frame" x="77" y="202" width="35" height="30"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="Back" destination="VWt-vz-Yaw" eventType="touchUpInside" id="oph-IP-Log"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="94v-zk-3zW"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="thX-gZ-qum" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1974" y="1279"/>
         </scene>
         <!--Family Parking-->
         <scene sceneID="dVW-jP-3M3">
@@ -152,14 +214,14 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="tRf-WH-9y6" kind="relationship" relationship="viewControllers" id="QL4-bS-PVT"/>
                         <segue destination="vmA-p8-L0u" kind="relationship" relationship="viewControllers" id="uqm-gb-Hxg"/>
                         <segue destination="uJX-CU-ybp" kind="relationship" relationship="viewControllers" id="T5H-Ra-W3x"/>
+                        <segue destination="R4w-dh-HXK" kind="relationship" relationship="viewControllers" id="K40-Zu-qpO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vni-ns-Fvz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1621" y="-155"/>
+            <point key="canvasLocation" x="-2522" y="-191"/>
         </scene>
         <!--Registration-->
         <scene sceneID="hIb-hQ-rWj">
@@ -240,7 +302,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JJ5-Wv-23K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-227" y="1554"/>
+            <point key="canvasLocation" x="-1409" y="1278"/>
         </scene>
         <!--Cars-->
         <scene sceneID="aTU-Vg-Zck">
@@ -257,7 +319,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CDw-9E-i8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1225" y="-155"/>
+            <point key="canvasLocation" x="-1960" y="-191"/>
         </scene>
         <!--Your Cars-->
         <scene sceneID="kQn-zy-gAd">
@@ -294,7 +356,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rNf-ap-coh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-845" y="-155"/>
+            <point key="canvasLocation" x="-1409" y="-191"/>
         </scene>
         <!--Add First Car-->
         <scene sceneID="PlT-xl-J2T">
@@ -352,7 +414,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U4V-M9-oIW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="419" y="957"/>
+            <point key="canvasLocation" x="-881" y="531"/>
         </scene>
     </scenes>
     <resources>
@@ -365,6 +427,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="HTR-2Y-p6f"/>
+        <segue reference="hwe-az-w7F"/>
+        <segue reference="pEW-q5-sfq"/>
     </inferredMetricsTieBreakers>
 </document>
