--- a/iOS/MapDem2/MapDemo/Base.lproj/Main.storyboard
+++ b/iOS/MapDem2/MapDemo/Base.lproj/Main.storyboard
@@ -193,6 +193,12 @@
                                     <action selector="Back" destination="VWt-vz-Yaw" eventType="touchUpInside" id="oph-IP-Log"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Right now, groups are not allowed. " lineBreakMode="headTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G2g-TI-Yv0">
+                                <rect key="frame" x="77" y="81" width="161" height="53"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
