iOS reorganization and Interface Completation
In this commit we have all the interfaces basically ready and a code
reorganization in folders

--- a/iOS/MapDem2/MapDemo/Base.lproj/Main.storyboard
+++ b/iOS/MapDem2/MapDemo/Base.lproj/Main.storyboard
@@ -433,7 +433,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="hwe-az-w7F"/>
-        <segue reference="pEW-q5-sfq"/>
+        <segue reference="HTR-2Y-p6f"/>
+        <segue reference="JsQ-LV-Sbo"/>
     </inferredMetricsTieBreakers>
 </document>
