--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_signin.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_signin.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginBottom="5dp"
             android:padding="5dp"
-            android:background="@drawable/rectangle_signin">
+            android:background="@drawable/rectangle_green">
             <EditText
                 android:id="@+id/name_surname_et"
                 android:layout_width="match_parent"
@@ -44,7 +44,7 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@id/name_surname_r"
             android:padding="5dp"
-            android:background="@drawable/rectangle_signin">
+            android:background="@drawable/rectangle_green">
             <EditText
                 android:id="@+id/email_et"
                 android:layout_width="match_parent"
@@ -69,8 +69,7 @@
             android:layout_below="@id/email_r"
             android:layout_centerHorizontal="true"
             android:background="@drawable/arrow_blue_up"
-            android:clickable="false"
-            android:onClick="onClick_SignIn"/>
+            android:clickable="false"/>
 
         <com.pnikosis.materialishprogress.ProgressWheel
             android:id="@+id/progress_signIn"
