--- a/Android/FamilyParking2/app/src/main/res/layout/car_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/car_item.xml
@@ -1,188 +1,97 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/car_item_container"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    android:layout_marginTop="5dp"
-    android:padding="15dp"
-    android:layout_centerHorizontal="true"
-    android:background="@drawable/abc_popup_background_mtrl_mult">
+    android:background="@color/transparent"
+    android:padding="5dp">
 
     <RelativeLayout
-        android:id="@+id/relative_car_car"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:layout_alignParentTop="true"
-        android:clickable="true">
-        <ImageView
-            android:id="@+id/car_iv"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/add_car"/>
-
-        <TextView
-            android:id="@+id/car_name_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/car_iv"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/gray"
-            android:background="@color/transparent"
-            android:singleLine="true"
-            android:hint="@string/car_model"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/relative_bluetooth_car"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:visibility="gone"
-        android:layout_below="@id/relative_car_car"
-        android:clickable="true">
-
-        <ImageView
-            android:id="@+id/bluetooth_iv"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="15dp"
-            android:background="@android:drawable/stat_sys_data_bluetooth"
-            android:backgroundTint="@color/blue"/>
-
-        <TextView
-            android:id="@+id/car_bluetooth_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/bluetooth_iv"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/gray"
-            android:background="@color/transparent"
-            android:singleLine="true"
-            android:hint="@string/car_model"/>
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/gray"
-        android:layout_below="@id/relative_bluetooth_car"
-        android:visibility="gone"/>
-
-    <RelativeLayout
-        android:id="@+id/button_rl_car"
+        android:id="@+id/car_item_rl"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_below="@id/line"
-        android:visibility="gone">
-
+        android:layout_height="wrap_content"
+        android:layout_marginRight="35dp"
+        android:layout_alignParentLeft="true"
+        android:layout_toRightOf="@id/car_arrow_iv">
 
         <RelativeLayout
-            android:id="@+id/back_rl"
+            android:id="@+id/car_info_rl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:clickable="true">
+            android:layout_centerInParent="true">
 
             <ImageView
-                android:id="@+id/image_back"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:id="@+id/car_brand_iv"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:background="@android:drawable/ic_menu_revert"
-                android:backgroundTint="@color/gray"/>
-
-            <TextView
-                android:id="@+id/back_car"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/image_back"
-                android:layout_centerVertical="true"
-                android:text="@string/back"
-                android:textSize="12sp"
-                android:textColor="@color/gray"
-                android:background="@color/transparent"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/modify_rl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:clickable="true">
+                android:src="@drawable/add_car"/>
 
             <ImageView
-                android:id="@+id/image_modify"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:id="@+id/car_bluetooth_iv"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_centerVertical="true"
-                android:background="@android:drawable/ic_menu_edit"
-                android:backgroundTint="@color/gray"/>
+                android:layout_alignParentRight="true"
+                android:background="@android:drawable/stat_sys_data_bluetooth"
+                android:backgroundTint="@color/blue"/>
 
-            <TextView
-                android:id="@+id/modify_car"
+            <RelativeLayout
+                android:id="@+id/car_string_rl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/image_modify"
-                android:text="@string/modify"
-                android:textSize="12sp"
-                android:textColor="@color/gray"
-                android:background="@color/transparent"/>
+                android:layout_toRightOf="@id/car_brand_iv"
+                android:layout_toLeftOf="@id/car_bluetooth_iv">
+
+                <TextView
+                    android:id="@+id/car_name_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Giulietta"
+                    android:textStyle="bold"
+                    android:textColor="@color/gray"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/car_register_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/car_name_tv"
+                    android:text="AB123CD"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp" />
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/delete_rl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+        <org.lucasr.twowayview.TwoWayView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/group_list"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="2dp"
+            android:layout_below="@id/car_info_rl"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:clickable="true">
-
-            <ImageView
-                android:id="@+id/image_delete"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_centerVertical="true"
-                android:background="@android:drawable/ic_menu_delete"
-                android:backgroundTint="@color/gray"/>
-
-            <TextView
-                android:id="@+id/delete_car"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/image_delete"
-                android:text="@string/delete"
-                android:textSize="12sp"
-                android:textColor="@color/gray"
-                android:background="@color/transparent"/>
-
-        </RelativeLayout>
+            android:listSelector="@android:color/transparent"
+            android:cacheColorHint="@android:color/transparent"
+            style="@style/TwoWayView"
+            android:drawSelectorOnTop="false"
+            tools:context=".Car"/>
 
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/car_arrow_iv"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/arrow"
+        android:backgroundTint="@color/blue"/>
+
 </RelativeLayout>
 
 
