--- a/Android/FamilyParking2/app/src/main/res/layout/contact_4car_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_4car_item.xml
@@ -1,4 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/group_contact_image_relative"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/transparent"
@@ -6,23 +8,21 @@
 
     <ImageView
         android:id="@+id/group_contact_image_iv"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerInParent="true"
         android:src="@drawable/user"/>
 
     <TextView
         android:id="@+id/group_contact_image_tv"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:visibility="gone"
-        android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:textAlignment="center"
-        android:gravity="center"
+        android:gravity="center|center_vertical|center_horizontal"
         android:textStyle="normal"
-        android:textSize="25sp"
+        android:textSize="15sp"
         android:textColor="@color/white"
         android:background="@drawable/add_group"/>
 
