--- a/Android/FamilyParking2/app/src/main/res/values/styles.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/styles.xml
@@ -22,4 +22,8 @@
         <item name="android:orientation">horizontal</item>
     </style>
 
+    <style name="normalText">
+        <item name="android:textStyle">normal</item>
+    </style>
+
 </resources>
