--- a/Android/FamilyParking2/app/src/main/res/layout/contact_detail_dialog.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_detail_dialog.xml
@@ -26,13 +26,29 @@
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/user"/>
 
+            <TextView
+                android:id="@+id/contact_image_tv_detail"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="gone"
+                android:layout_alignParentLeft="true"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:gravity="center|center_vertical|center_horizontal"
+                android:textStyle="normal"
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                android:background="@drawable/add_group"
+                android:layout_toRightOf="@id/contact_image_iv_detail"
+                android:layout_toEndOf="@id/contact_image_iv_detail"/>
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/contact_image_iv_detail"
-                android:layout_toEndOf="@id/contact_image_iv_detail">
+                android:layout_toRightOf="@id/contact_image_tv_detail"
+                android:layout_toEndOf="@id/contact_image_tv_detail">
 
                 <TextView
                     android:id="@+id/contact_name_tv_detail"
