--- a/Android/FamilyParking2/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_item.xml
@@ -18,13 +18,29 @@
             android:layout_centerHorizontal="true"
             android:src="@drawable/user"/>
 
+        <TextView
+            android:id="@+id/contact_image_tv"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:visibility="gone"
+            android:layout_alignParentLeft="true"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:gravity="center|center_vertical|center_horizontal"
+            android:textStyle="normal"
+            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:background="@drawable/add_group"
+            android:layout_toRightOf="@id/contact_image_iv"
+            android:layout_toEndOf="@id/contact_image_iv"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/contact_image_iv"
-            android:layout_toEndOf="@id/contact_image_iv">
+            android:layout_toRightOf="@id/contact_image_tv"
+            android:layout_toEndOf="@id/contact_image_tv">
 
             <TextView
                 android:id="@+id/contact_name_tv"
