--- a/Android/FamilyParking2/app/src/main/res/values/color.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/color.xml
@@ -16,6 +16,7 @@
     <color name="gray">@android:color/darker_gray</color>
     <color name="soft_gray">#EEEEEE</color>
     <color name="soft_gray_transparent">#AAEEEEEE</color>
+    <color name="gray_transparent">#AA999999</color>
     <color name="transparent">@android:color/transparent</color>
     <color name="purple">#9C27B0</color>
     <color name="orange">#FF5722</color>
