--- a/Android/FamilyParking2/app/src/main/res/layout/car_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/car_item.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/car_item_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/transparent"
+    android:clickable="true"
     android:padding="5dp">
 
     <Button
@@ -34,7 +36,7 @@
                 android:layout_marginLeft="3dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/add_car"/>
+                android:background="@drawable/add_car"/>
 
             <RelativeLayout
                 android:id="@+id/bluetooth_circle_ok"
